Bug #9891 Crash in DBACC (line 7004) during commit
Submitted: 14 Apr 2005 10:41 Modified: 25 Apr 2005 13:04
Reporter: Johan Andersson
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version:mysql 5.0.3 OS:Linux (linux 2.4.21-20 (64-bit))
Assigned to: Jonas Oreland Target Version:

[14 Apr 2005 10:41] Johan Andersson
Description:
Populating NDB with 15M rows caused a crash in DBACC when committing the transaction.

The PK is a long key (48 bytes).

/* ******************---------------------------------------------------------------\
 */
/* ACC_CONTOPREQ                                        COMMIT  TRANSACTION         \
 */
/* ******************------------------------------+                                \
 */
/*   SENDER: LQH,    LEVEL B       */
void Dbacc::execACC_CONTOPREQ(Signal* signal)
{
  Uint32 tcorLocalFrag;

  jamEntry();
  lcpConnectptr.i = signal->theData[0];
  /* CONNECTION PTR                  */
  tcorLocalFrag = signal->theData[1];
  /* LOCAL FRAG ID                   */
  tresult = 0;
  ptrCheckGuard(lcpConnectptr, clcpConnectsize, lcpConnectrec);
  ndbrequire(lcpConnectptr.p->lcpstate == LCP_ACTIVE);
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Fails here.

How to repeat:
Will get program that populates the db
[14 Apr 2005 13:43] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/24017
[14 Apr 2005 13:44] Jonas Oreland
Patch against 5.0.4

Attachment: patch.txt (text/plain), 7.48 KiB.